motto text align fix

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -49,6 +49,12 @@
       color: #7b7b7b;
     }
 
+    @media (max-width: 1060px) {
+      p {
+        text-align: center;
+      }
+    }
+
     @media (max-width: 650px) {
       flex-direction: column;
       align-items: center;
